# glad

./: CMakeLists.txt
include/glad/: gl.h
src/: gl.c
